--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,8 @@ h1{
 
 /* second*/
 
+.dream-area{
+    background-image: url(/images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
