--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ h1{
     color: orange;
 }
 .top-banner{
-    background-image: url(/images/top-banner.png);
+    background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 
 }
@@ -40,7 +40,7 @@ h1{
 /* second*/
 
 .dream-area{
-    background-image: url(/images/dream-bg.png);
+    background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -70,7 +70,7 @@ h2{
     border-image-slice: 1;
 }
 .exprience{
-    background-image: url(/images/exp-bg.png);
+    background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
 }
